nginx-with-ubuntu.yaml
apiVersion: v1
kind: Pod
metadata:
    name: my-nginx-pod
spec:
    containers:
    - name: my-nginx-container
      image: nginx:latest
      ports:
      - containerPort: 80
        protocol: TCP
    - name: ubuntu-sidecar-container
      image: alicek106/rr-test:curl
      command: ["tail"]
      args: ["-f", "/dev/null"]
