practice-deployment02.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-with-volume-deployement
spec: 
  replicas: 1
  selector:
    matchLabels:
      app: my-nginx
  template:
    metadata:
      name: nginx-volume-pod
      labels:
        app: my-nginx
    spec: 
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - name: shared-data
          mountPath: /usr/share/nginx/html
      volumes:
      - name: shared-data
        hostPath: 
          path: /shared
          type: Directory
