selective-env-from-configmap.yaml
apiVersion: v1
kind: Pod
metadata:
  name: container-selective-env-example
spec:
  containers:
  - name: my-container
    image: busybox
    args: ["tail", "-f", "/dev/null"]
