test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
spec:
  containers:
  - name: test-pod-container
    image: busybox
    args: ["tail", "-f", "/dev/null"]
