hostname-svc-clusterip.yaml
apiVersion: v1
kind: Service
metadata: 
  name: hostname-svc-clusterip
spec: 
  ports:
  - name: web-port
    port: 8080
    targetPort: 80
  selector:
    app: webserver
  type: ClusterIP
